# llm-tools

./: .gitignore  .pre-commit-config.yaml  README.adoc  README.md  environment.yml  pyproject.toml  train.sh
doc/: Doxyfile
examples/: AI_results.csv  test_inference.py  test_train.py  train.sh
examples/workspace/inf_dir/config/: train_llama3.yaml
model_configs/: llama3.yaml  qwen-coder.yaml  qwen8b-train.yaml  train_llama3.yaml
src/llm_inference/: main.py  main_application.py  pipeline.py
src/llm_inference/config/: config.py  dataset_config.py  general_config.py  model_config.py  validators.py
src/llm_inference/dataset/: hf_msg_dataset.py  msg_dataset.py  msg_formatter.py
src/llm_inference/runner/: abstract_model_runner.py  hf_runner.py  runner_getter.py  vllm_runner.py
src/llm_inference/type/: model_dtype.py  model_type.py  msg_role_type.py  runner_type.py  url_type.py
src/llm_tools/: abstract_pipeline.py
src/llm_tools/auto_tokenizer_processor/: abstract_wrapper.py  processor_wrapper.py  selector.py  tokenizer_wrapper.py
src/llm_tools/config/: additional_token.py  config.py  dataset_config.py  environment_config.py  evironment_config.py  experiment_config.py  metric_config.py  model_config.py  peft_method.py  readme.adoc  train_config.py  validators.py
src/llm_tools/dataset/: abstract_dataset.py  dataset.py  dialog.py  hf_msg_dataset.py  msg.py  msg_dataset.py  msg_formatter.py
src/llm_tools/llm_finetuning/: pipeline.py
src/llm_tools/llm_finetuning/trainer/: abstract_trainer.py  hf_sft_trainer.py  hf_trainer.py  unsloth_trainer.py
src/llm_tools/llm_inference/: main.py  pipeline.py
src/llm_tools/llm_inference/runner/: abstract_model_runner.py  hf_runner.py  model_output_item.py  runner_getter.py  vllm_runner.py
src/llm_tools/metric/: abstract_metric.py  hf_metric_wrapper.py  metric_selector.py  svg_img_metric.py
src/llm_tools/type/: metric.py  model_dtype.py  model_type.py  msg_role_type.py  runner_type.py  url_type.py
