[project]
name = "llm-tools"
version = "0.0.1"
description = "Add your description here"
authors = [
    { name = "Artem Durynin", email = "artem5542@gmail.com" }
]
dependencies = [
    "pydantic>=2.7.3",
    "pydantic-settings>=2.3.1",
    "pre-commit>=3.7.1",
    "ruff>=0.4.8",
    "transformers>=4.41.2",
    "pandas>=2.2.2",
    "accelerate>=0.31.0",
    "torch==2.3.0",
    
    "pytest>=8.2.2",
    "ipython>=8.25.0",
    "openai"
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_tools"]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
type = "index"
